# relations-lib

./: .gitignore  CMakeLists.txt  README.md
include/matrix/: config.h  errors.h  matrix.h  output.h
include/relations/: config.h  errors.h  operations.h
src/errors/: errors.c
src/errors/messages/: messages.c  messages.h
src/errors/messages/locales/: locale_en.c  locale_ru.c
src/operations/: operations.c  operations.h
